--- a/analysis/Script_nb.ipynb
+++ b/analysis/Script_nb.ipynb
@@ -1485,6 +1485,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7cb916f5-9642-435e-bbb0-735ba2b76b7e",
+   "metadata": {},
+   "source": [
+    "> Looks good."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d56924d-d344-4ec8-998e-b095da04618c",
    "metadata": {},
    "source": [
@@ -1783,35 +1791,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "38e26a8d-9b2a-484f-a200-deb6a1151cc8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7 entries, 0 to 6\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Employee  7 non-null      object \n",
+      " 1   Role      7 non-null      object \n",
+      " 2   Pay Rate  7 non-null      float64\n",
+      " 3   Hours     7 non-null      float64\n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 352.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "cei_payroll.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "aba34829-f9ee-4de3-a172-c1ae93aa54cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee</th>\n",
+       "      <th>Role</th>\n",
+       "      <th>Pay Rate</th>\n",
+       "      <th>Hours</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alaynah Bowman</td>\n",
+       "      <td>Receptionist</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alyssa Bowman</td>\n",
+       "      <td>Receptionist</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>37.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Carlos Smith</td>\n",
+       "      <td>Receptionist</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Carrie Lewandowski</td>\n",
+       "      <td>Office Admin</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chelby Davis</td>\n",
+       "      <td>Receptionist</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Mia Kelly</td>\n",
+       "      <td>COVID</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Rebecca Wisner</td>\n",
+       "      <td>Receptionist</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Employee          Role  Pay Rate  Hours\n",
+       "0      Alaynah Bowman  Receptionist      14.0   12.5\n",
+       "1       Alyssa Bowman  Receptionist      14.0   37.5\n",
+       "2        Carlos Smith  Receptionist    2000.0    1.0\n",
+       "3  Carrie Lewandowski  Office Admin      16.0    5.0\n",
+       "4        Chelby Davis  Receptionist      15.0   82.0\n",
+       "5           Mia Kelly         COVID      13.0   26.0\n",
+       "6      Rebecca Wisner  Receptionist      14.0   16.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cei_payroll"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05dc975c-1199-4669-a99b-93fbf42466db",
+   "cell_type": "markdown",
+   "id": "a8c7541c-7589-4faa-a242-ba1fae7b9d57",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> Looks good."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3403c7b-7081-4523-a994-4fd1d6c92b42",
+   "cell_type": "markdown",
+   "id": "84702ee3-f365-4ca5-bfc3-3786702e2006",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "------"
+   ]
   },
   {
    "cell_type": "code",
