Update payrate info and add DOT column.

--- a/analysis/Script_nb.ipynb
+++ b/analysis/Script_nb.ipynb
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "id": "09df635e-7467-4283-9636-162754dcaf24",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1005,7 @@
        "8   Tricia Loomis  Nurse   $18.00  50.50"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "id": "d56fd661-6895-47cd-bfb3-f51da0dd495a",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1155,7 @@
        "8   Tricia Loomis  Nurse   $18.00  50.50"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "5a28f987-8285-4f37-8e5c-e70b8d0ea6dd",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1297,7 @@
        "8   Tricia Loomis  Nurse    18.00  50.50"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "id": "eda4d8d2-3427-4ba9-a98b-d40c5fb9f526",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "id": "54418723-7d8a-46c0-88ef-627536861b87",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "4852b750-3a92-4442-9714-dfa89ad572a1",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1496,7 @@
        "8   Tricia Loomis  Nurse      18.0  50.50           909.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1510,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
+   "id": "a1f314ba-63e6-40a6-be75-b9468dbe87d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mcmco\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add DOT column\n",
+    "wellness_payroll['DOT'] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "id": "d92c50c8-a93a-443c-8376-559944df977e",
    "metadata": {},
    "outputs": [
@@ -1552,6 +1576,7 @@
        "      <th>Pay Rate</th>\n",
        "      <th>Hours</th>\n",
        "      <th>Payroll Amount</th>\n",
+       "      <th>DOT</th>\n",
        "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1564,6 +1589,7 @@
        "      <td>1.00</td>\n",
        "      <td>4900.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1572,6 +1598,7 @@
        "      <td>18.0</td>\n",
        "      <td>75.25</td>\n",
        "      <td>1354.5</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1582,6 +1609,7 @@
        "      <td>9.50</td>\n",
        "      <td>190.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1590,6 +1618,7 @@
        "      <td>20.0</td>\n",
        "      <td>43.50</td>\n",
        "      <td>870.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1600,6 +1629,7 @@
        "      <td>24.00</td>\n",
        "      <td>432.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1608,6 +1638,7 @@
        "      <td>18.0</td>\n",
        "      <td>28.00</td>\n",
        "      <td>504.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1618,6 +1649,7 @@
        "      <td>1.00</td>\n",
        "      <td>5000.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1626,6 +1658,7 @@
        "      <td>50.0</td>\n",
        "      <td>16.00</td>\n",
        "      <td>800.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1636,25 +1669,26 @@
        "      <td>50.50</td>\n",
        "      <td>909.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Employee   Role  Pay Rate  Hours  Payroll Amount Notes\n",
-       "0     Carrie Guga     PA    4900.0   1.00          4900.0      \n",
-       "1   Cassidy Davis  Nurse      18.0  75.25          1354.5      \n",
-       "2   Debra Russell  Nurse      20.0   9.50           190.0      \n",
-       "3     Jodie Ewing  Nurse      20.0  43.50           870.0      \n",
-       "4   Kristy Knight  Nurse      18.0  24.00           432.0      \n",
-       "5     Lucie Tatum  Nurse      18.0  28.00           504.0      \n",
-       "6     Milly Smith     PA    5000.0   1.00          5000.0      \n",
-       "7  Rick Tontarski     PA      50.0  16.00           800.0      \n",
-       "8   Tricia Loomis  Nurse      18.0  50.50           909.0      "
+       "         Employee   Role  Pay Rate  Hours  Payroll Amount DOT Notes\n",
+       "0     Carrie Guga     PA    4900.0   1.00          4900.0          \n",
+       "1   Cassidy Davis  Nurse      18.0  75.25          1354.5          \n",
+       "2   Debra Russell  Nurse      20.0   9.50           190.0          \n",
+       "3     Jodie Ewing  Nurse      20.0  43.50           870.0          \n",
+       "4   Kristy Knight  Nurse      18.0  24.00           432.0          \n",
+       "5     Lucie Tatum  Nurse      18.0  28.00           504.0          \n",
+       "6     Milly Smith     PA    5000.0   1.00          5000.0          \n",
+       "7  Rick Tontarski     PA      50.0  16.00           800.0          \n",
+       "8   Tricia Loomis  Nurse      18.0  50.50           909.0          "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "18bfdac8-6b72-40c8-95a0-5c39abc8ed9b",
    "metadata": {},
    "outputs": [
@@ -1709,6 +1743,7 @@
        "      <th>Pay Rate</th>\n",
        "      <th>Hours</th>\n",
        "      <th>Payroll Amount</th>\n",
+       "      <th>DOT</th>\n",
        "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1720,6 +1755,7 @@
        "      <td>4900.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>4900.0</td>\n",
+       "      <td></td>\n",
        "      <td>Janney Montgomery</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1730,6 +1766,7 @@
        "      <td>75.25</td>\n",
        "      <td>1354.5</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1738,6 +1775,7 @@
        "      <td>20.0</td>\n",
        "      <td>9.50</td>\n",
        "      <td>190.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1748,6 +1786,7 @@
        "      <td>43.50</td>\n",
        "      <td>870.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1756,6 +1795,7 @@
        "      <td>18.0</td>\n",
        "      <td>24.00</td>\n",
        "      <td>432.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1766,6 +1806,7 @@
        "      <td>28.00</td>\n",
        "      <td>504.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1774,6 +1815,7 @@
        "      <td>5000.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>5000.0</td>\n",
+       "      <td></td>\n",
        "      <td>Janney Montgomery</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1784,6 +1826,7 @@
        "      <td>16.00</td>\n",
        "      <td>800.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1793,25 +1836,37 @@
        "      <td>50.50</td>\n",
        "      <td>909.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Employee   Role  Pay Rate  Hours  Payroll Amount              Notes\n",
-       "0     Carrie Guga     PA    4900.0   1.00          4900.0  Janney Montgomery\n",
-       "1   Cassidy Davis  Nurse      18.0  75.25          1354.5                   \n",
-       "2   Debra Russell  Nurse      20.0   9.50           190.0                   \n",
-       "3     Jodie Ewing  Nurse      20.0  43.50           870.0                   \n",
-       "4   Kristy Knight  Nurse      18.0  24.00           432.0                   \n",
-       "5     Lucie Tatum  Nurse      18.0  28.00           504.0                   \n",
-       "6     Milly Smith     PA    5000.0   1.00          5000.0  Janney Montgomery\n",
-       "7  Rick Tontarski     PA      50.0  16.00           800.0                   \n",
-       "8   Tricia Loomis  Nurse      18.0  50.50           909.0                   "
+       "         Employee   Role  Pay Rate  Hours  Payroll Amount DOT  \\\n",
+       "0     Carrie Guga     PA    4900.0   1.00          4900.0       \n",
+       "1   Cassidy Davis  Nurse      18.0  75.25          1354.5       \n",
+       "2   Debra Russell  Nurse      20.0   9.50           190.0       \n",
+       "3     Jodie Ewing  Nurse      20.0  43.50           870.0       \n",
+       "4   Kristy Knight  Nurse      18.0  24.00           432.0       \n",
+       "5     Lucie Tatum  Nurse      18.0  28.00           504.0       \n",
+       "6     Milly Smith     PA    5000.0   1.00          5000.0       \n",
+       "7  Rick Tontarski     PA      50.0  16.00           800.0       \n",
+       "8   Tricia Loomis  Nurse      18.0  50.50           909.0       \n",
+       "\n",
+       "               Notes  \n",
+       "0  Janney Montgomery  \n",
+       "1                     \n",
+       "2                     \n",
+       "3                     \n",
+       "4                     \n",
+       "5                     \n",
+       "6  Janney Montgomery  \n",
+       "7                     \n",
+       "8                     "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "id": "444bdfcb-ae96-4b0b-bf55-7a27cc1f04bc",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "id": "69ebc6bf-d266-4914-a575-78cedc845a4d",
    "metadata": {},
    "outputs": [
@@ -1872,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "id": "845cd817-a396-4446-9da0-c8abf8478663",
    "metadata": {},
    "outputs": [],
@@ -1883,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "id": "1e0bcbde-a94d-40e6-9aee-5b8d2337e6fb",
    "metadata": {},
    "outputs": [
@@ -1912,6 +1967,7 @@
        "      <th>Pay Rate</th>\n",
        "      <th>Hours</th>\n",
        "      <th>Payroll Amount</th>\n",
+       "      <th>DOT</th>\n",
        "      <th>Notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1923,6 +1979,7 @@
        "      <td>75.25</td>\n",
        "      <td>1354.5</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1930,6 +1987,7 @@
        "      <td>18.0</td>\n",
        "      <td>50.50</td>\n",
        "      <td>909.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1939,6 +1997,7 @@
        "      <td>43.50</td>\n",
        "      <td>870.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1946,6 +2005,7 @@
        "      <td>18.0</td>\n",
        "      <td>28.00</td>\n",
        "      <td>504.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1955,6 +2015,7 @@
        "      <td>24.00</td>\n",
        "      <td>432.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1962,6 +2023,7 @@
        "      <td>50.0</td>\n",
        "      <td>16.00</td>\n",
        "      <td>800.0</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1971,6 +2033,7 @@
        "      <td>9.50</td>\n",
        "      <td>190.0</td>\n",
        "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1978,6 +2041,7 @@
        "      <td>4900.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>4900.0</td>\n",
+       "      <td></td>\n",
        "      <td>Janney Montgomery</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1986,6 +2050,7 @@
        "      <td>5000.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>5000.0</td>\n",
+       "      <td></td>\n",
        "      <td>Janney Montgomery</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1993,19 +2058,19 @@
        "</div>"
       ],
       "text/plain": [
-       "         Employee  Pay Rate  Hours  Payroll Amount              Notes\n",
-       "0   Cassidy Davis      18.0  75.25          1354.5                   \n",
-       "1   Tricia Loomis      18.0  50.50           909.0                   \n",
-       "2     Jodie Ewing      20.0  43.50           870.0                   \n",
-       "3     Lucie Tatum      18.0  28.00           504.0                   \n",
-       "4   Kristy Knight      18.0  24.00           432.0                   \n",
-       "5  Rick Tontarski      50.0  16.00           800.0                   \n",
-       "6   Debra Russell      20.0   9.50           190.0                   \n",
-       "7     Carrie Guga    4900.0   1.00          4900.0  Janney Montgomery\n",
-       "8     Milly Smith    5000.0   1.00          5000.0  Janney Montgomery"
+       "         Employee  Pay Rate  Hours  Payroll Amount DOT              Notes\n",
+       "0   Cassidy Davis      18.0  75.25          1354.5                       \n",
+       "1   Tricia Loomis      18.0  50.50           909.0                       \n",
+       "2     Jodie Ewing      20.0  43.50           870.0                       \n",
+       "3     Lucie Tatum      18.0  28.00           504.0                       \n",
+       "4   Kristy Knight      18.0  24.00           432.0                       \n",
+       "5  Rick Tontarski      50.0  16.00           800.0                       \n",
+       "6   Debra Russell      20.0   9.50           190.0                       \n",
+       "7     Carrie Guga    4900.0   1.00          4900.0      Janney Montgomery\n",
+       "8     Milly Smith    5000.0   1.00          5000.0      Janney Montgomery"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
